# manage_order_system

./: .env  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: dc4ed4b3af61_init.py
app/: app.py
app/config/: db.py  logging.py  redis.py  security.py  settings.py
app/exception/: global_handler.py  http_exceptions.py  order_exceptions.py  user_exception.py
app/models/: order.py  user.py
app/models/util/: order_status.py
app/routers/: order_router.py  user_router.py
app/schemas/: order_dtos.py  user_dtos.py
app/services/: order_service.py  user_service.py
app/util/: jwt_util.py
celery_worker/: Dockerfile  pyproject.toml
celery_worker/app/celery/: celery_worker.py
celery_worker/app/config/: settings.py
celery_worker/app/tasks/: tasks.py
kafka_consumer/: Dockerfile  main.py  pyproject.toml
kafka_consumer/app/celery/: celery_client.py
kafka_consumer/app/config/: logging.py  redis.py  settings.py
web/: pyproject.toml
web/alembic/: env.py
web/alembic/versions/: d81dac05eda4_add_outbox.py
web/app/: app.py
web/app/config/: db.py  logging.py  redis.py  security.py  settings.py
web/app/exception/: global_handler.py  http_exceptions.py  order_exceptions.py  user_exception.py
web/app/models/: base.py  order.py  outbox.py  user.py
web/app/models/util/: order_status.py
web/app/routers/: order_router.py  user_router.py
web/app/schemas/: error_response.py  order_dtos.py  user_dtos.py
web/app/services/: order_service.py  user_service.py
web/app/util/: jwt_util.py  limiter.py  outbox_worker.py
(+1 files in other folders)
